tests/_tests/errors/nomain.cl
(* Missing main function *)

class A inherits IO{
	main() : Object {
		out_string("Hello!")
	};
};
